<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/headloginimage"
        />
    <LinearLayout
        android:layout_weight="0.03"
        android:layout_marginVertical="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtenglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            />
        <TextView
            android:id="@+id/txtitalian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italiano"
            />
        <TextView
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btnsecrett"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/azulfuerte"
            android:text="@string/m_s"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:clickable="true"
            android:id="@+id/emailclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono_o_correo_electr_nico"
            android:backgroundTint="#CBC4C4C4"
            android:textColorHint="#9F9F9F"
            android:cursorVisible="true"
            tools:targetApi="lollipop"
            android:focusable="false" />
        <EditText
            android:clickable="true"
            android:focusable="false"
            android:cursorVisible="true"
            android:id="@+id/passclick"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:textColorHint="#9F9F9F"
            android:backgroundTint="#CBC4C4C4"
            tools:targetApi="lollipop" />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:enabled="false"
            android:textAllCaps="false"
            android:text="@string/iniciar_sesi_n"
            android:textColor="#6AFFFFFF"
            android:background="@color/azulfuerte"
            />
        <Button
            android:id="@+id/btnresetaccount"
            android:background="@android:color/transparent"
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/azulfuerte"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.07"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="0.4"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="20dp">
            <View
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:layout_gravity="center"
                android:background="#C4C4C4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="0"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text=" O "
                android:layout_gravity="center"
                android:gravity="center"
                />
            <View
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:layout_gravity="center"
                android:background="#C4C4C4"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:text="@string/crear_cuenta_de_facebook"
            android:background="#30A24B"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.1"
            />
    </LinearLayout>


</LinearLayout>