<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Login2">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_weight="0.55"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_face_cien"
        />
    <LinearLayout
        android:layout_weight="1.5"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            app:hintEnabled="false"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailset"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:textColorHint="#9F9F9F"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/tel_fono_o_correo_electr_nico"
                android:paddingStart="2dp"
                android:paddingBottom="3dp"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="2dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinput"
            app:hintEnabled="false"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/contrase_a"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColorHint="#9F9F9F"
                android:shadowColor="@android:color/transparent"
                android:id="@+id/passwordset"
                android:imeOptions="actionDone"
                android:paddingBottom="3dp"
                android:paddingStart="2dp"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="2dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:text="@string/iniciar_sesi_n"
            android:enabled="false"
            android:textColor="#6AFFFFFF"
            android:background="@color/azulfuerte"
            />
        <Button
            android:id="@+id/registeraccount"
            android:background="@android:color/transparent"
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:text="@string/crear_cuenta_de_facebook"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/azulfuerte"
            />
    </LinearLayout>
</LinearLayout>